--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "express-async-errors": "^3.1.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^4.8.1"
   },
   "scripts": {
@@ -22,6 +23,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
